--- a/CAO.Blackjack.Forms/CAO.Blackjack.Forms.csproj
+++ b/CAO.Blackjack.Forms/CAO.Blackjack.Forms.csproj
@@ -1,46 +1,52 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Title>Blackjack</Title>
-    <Version>1.0.4</Version>
-    <Authors>Cédric-Antoine Ouellet</Authors>
-    <Company>cedricao</Company>
-    <Product>Blackjack</Product>
-    <Description>A Blackjack game made in Windows Forms</Description>
-    <PackageIcon>icon.png</PackageIcon>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<UseWindowsForms>true</UseWindowsForms>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Title>Blackjack</Title>
+		<Version>1.1.0</Version>
+		<Authors>Cédric-Antoine Ouellet</Authors>
+		<Company>cedricao</Company>
+		<Product>Blackjack</Product>
+		<Description>A Blackjack game made in Windows Forms</Description>
+		<PackageIcon>icon.png</PackageIcon>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CAO.Blackjack.Core\CAO.Blackjack.Core.csproj">
-      <Private>True</Private>
-    </ProjectReference>
-  </ItemGroup>
+		<!-- This line stops the Git commit ID from being displayed in the version -->
+		<IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\CAO.Blackjack.Core\CAO.Blackjack.Core.csproj">
+			<Private>True</Private>
+		</ProjectReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Update="Forms\FormAchievements.cs">
+			<SubType>Form</SubType>
+		</Compile>
+		<Compile Update="Properties\Resources.Designer.cs">
+			<DesignTime>True</DesignTime>
+			<AutoGen>True</AutoGen>
+			<DependentUpon>Resources.resx</DependentUpon>
+		</Compile>
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="Resources\icon.png">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Update="Properties\Resources.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+		</EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Update="Resources\icon.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 
 </Project>
